# acdc-challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
code/: main.py
code/demos/: best_model.py  kfold_plot.py
code/eda/: collinearity.py  demographics.py  eda.py  normalization.py  outliers.py
code/metrics/: evaluate_model.py  metrics.py
code/models/: ann.py  knn.py  rf.py  svm.py
code/processing/: processing.py
code/splits/: simple.py  stratifiedkfold.py
code/tools/: CoefficientThresholdLasso.py
code/utils/: CoefficientThresholdLasso.py  generate_short_labels.py  parse_best_params.py
data/datasets/: norm_acdc_radiomics.csv
data/kfold/: X_temp_norm.csv  X_test_norm.csv
data/processed/: X_test.csv  X_test_lda.csv  norm_acdc_radiomics.csv  y_test.csv
data/simple/: X_temp_raw.csv  X_test_raw.csv  X_train_norm.csv  X_train_raw.csv  X_val_norm.csv  X_val_raw.csv  y_temp_raw.csv  y_train_raw.csv  y_val_raw.csv
misc/: custom_style.mplstyle  refs.bib
report/: main.sty  main.tex
report/sections/: annexes.tex  discussion_and_conclusions.tex  experimental_design.tex  introduction.tex  methodology.tex  results.tex
results/metrics/ann/: ann_baseline_classification_report.csv  ann_baseline_classification_summary.txt  ann_kfold_classification_report.csv  ann_kfold_classification_summary.txt  ann_simple_classification_report.csv  ann_simple_classification_summary.txt
results/metrics/knn/: knn_baseline_classification_report.csv  knn_baseline_classification_summary.txt  knn_kfold_classification_report.csv  (+3 more)
results/models/: label_encoder.pkl
(+30 files in other folders)
