[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acdc"
version = "0.1.0"
description = "Machine learning applied to radiomic features extracted from cardiac MRI scans"
authors = [{ name = "Ravneet-Rahul Sandhu Singh", email = "rahulsandhu542001@gmail.com" }]

[tool.setuptools]
package-dir = {"" = "code"}
packages = ["models", "metrics", "utils"]
